# igs-rust-mcp

./: .gitignore  .oh-my-opencode-pi-stats.json  .oh-my-opencode-pi-workflow.json  AGENTS.md  Cargo.toml  IGS_UPGRADE_PLAN.md  IGS_UPGRADE_PLAN_V2.md  README.md  UPGRADE_PLAN.md
.contexty/sessions/ses_1ef1cacc8ffeaM0Bc4yLXI9Egy/: metrics.json
.contexty/sessions/ses_1ef1cb1aeffeI1JImjp4wts8Wm/: metrics.json
.contexty/sessions/ses_1ef1cdf96ffeAM3UgZQawZfflF/: meta.json  metrics.json  tool-parts.json
.github/workflows/: ci.yml  release.yml
.hive/: sessions.json
.memsearch/: .last_msg_time
.memsearch/memory/: 2026-05-10.md
config/: countries.yml  pools.yml  settings.example.yml  settings.yml  sources.yml
docs/: low_latency_semantic_sifting_whitepaper.md  phase5-audit-fixes-plan.md
docs/superpowers/plans/: 2026-06-15-mcp-tool-system-refactor.md
scripts/: configure-mcp.sh  install.sh  uninstall.sh
src/: cache.rs  cli.rs  clustering.rs  config.rs  fusion.rs  http.rs  lib.rs  lightpanda.rs  lightpanda_mcp.rs  main.rs  obscura.rs  parsers.rs  persistence.rs  server.rs  types.rs
src/tools/: climate.rs  dump.rs  env.rs  finance.rs  govt.rs  health.rs  helpers.rs  insights.rs  intelligence.rs  legal.rs  lp_mcp.rs  mod.rs  news.rs  parsers.rs  patents.rs  politics.rs  pools.rs  reddit.rs  registry.rs  research.rs  satellite.rs  security.rs  sop.rs  sources.rs  supply_chain.rs  tool_guide.rs  twitter.rs  types.rs  types_base.rs  weather.rs  web.rs  youtube.rs
tests/: platform_integration_test.rs  reddit_debug_test.rs  test_all_tools.py
