[package]
name = "igs-rust-mcp"
version = "0.1.0"
edition = "2021"
description = "Intelligence Gathering System MCP Server - Rust implementation"
authors = ["ishan-parihar"]

[lib]
name = "igs_rust_mcp"
path = "src/lib.rs"

[[bin]]
name = "igs-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.6", features = ["server", "macros", "transport-io"] }
toon-format = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
feed-rs = "2.3"
schemars = { version = "1.0", features = ["derive", "chrono04"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
scraper = "0.22"
url = "2.5"
