[package]
name = "igs-rust-mcp"
version = "0.5.1"
edition = "2021"
description = "Intelligence Gathering System - RSS/HTTP source monitoring MCP server with NLP enrichment"
authors = ["Ishan Parihar"]
license = "MIT"
repository = "https://github.com/ishan-parihar/igs-rust-mcp"
homepage = "https://github.com/ishan-parihar/igs-rust-mcp"
keywords = ["mcp", "rss", "news", "intelligence", "scraper", "nlp"]
categories = ["command-line-utilities", "web-programming::scraping"]

[lib]
name = "igs_rust_mcp"
path = "src/lib.rs"

[[bin]]
name = "igs"
path = "src/cli.rs"

[dependencies]
rmcp = { version = "1.6", features = ["server", "macros", "transport-io"] }
toon-format = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "native-tls",
  "gzip",
  "brotli",
  "deflate",
] }
feed-rs = "2.3"
schemars = { version = "1.0", features = ["derive", "chrono04"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
scraper = "0.22"
url = "2.5"
html-to-markdown-rs = "3.5"
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
unpdf = "0.7"
urlencoding = "2.1"
openssl-sys = { version = "0.9.117", features = ["vendored"] }

